fixing scroll text anim

--- a/contact.html
+++ b/contact.html
@@ -580,7 +580,8 @@
             extraordinary in my digital work.
           </p>
           <p class="caption">
-            &copy; realsam.pro. All rights reserved 2025.
+            &copy; designed and developed by realsam.pro.
+            All rights reserved 2025.
           </p>
         </div>
         <div class="col-2">
