--- a/index.html
+++ b/index.html
@@ -544,12 +544,14 @@
       <section class="testimonials">
         
         <div class="col-1">
-          <h3 class="reveal-type-scroll">
-            Testimonials
-          </h3>
-          <h2 class="reveal-type-scroll">
-            What My Clients Say?
-          </h2>
+          <div class="section-title">
+            <h3 class="reveal-type-scroll">
+              Testimonials
+            </h3>
+            <h2 class="reveal-type-scroll">
+              What My Clients Say?
+            </h2>
+          </div>          
         </div>
           
         <!-- <div class="bg-ellipse"></div> -->
@@ -812,7 +814,8 @@
             extraordinary in my digital work.
           </p>
           <p class="caption">
-            &copy; realsam.pro. All rights reserved 2025.
+            &copy; designed and developed by realsam.pro.
+            All rights reserved 2025.
           </p>
         </div>
         <div class="col-2">
